--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.qwshen</groupId>
-    <artifactId>spark-etl-framework</artifactId>
-    <version>1.0</version>
-    <packaging>jar</packaging>
-
     <properties>
         <java.version>1.8</java.version>
-        <scala.version>2.12.10</scala.version>
+        <scala.version>2.12.9</scala.version>
         <scala.compact.version>2.12</scala.compact.version>
+
+        <!-- Spark 3.0.1
         <spark.version>3.0.1</spark.version>
+        <delta.lake.version>0.8.0</delta.lake.version>
+        -->
+        <spark.version>3.1.1</spark.version>
+        <delta.lake.version>1.0.1</delta.lake.version>
+
         <spark.avro.version>3.0.1</spark.avro.version>
-        <delta.lake.version>0.7.0</delta.lake.version>
         <gson.version>2.8.6</gson.version>
         <maven.compiler.plugin>3.8.1</maven.compiler.plugin>
         <maven.scala.plugin>2.15.2</maven.scala.plugin>
@@ -25,14 +26,19 @@
         <hbase.version>1.7.1</hbase.version>
     </properties>
 
+    <groupId>com.qwshen</groupId>
+    <artifactId>spark-etl-framework_${spark.version}</artifactId>
+    <version>1.0</version>
+    <packaging>jar</packaging>
+
     <repositories>
         <repository>
             <id>confluent.io</id>
-            <url>http://packages.confluent.io/maven/</url>
+            <url>https://packages.confluent.io/maven/</url>
         </repository>
         <repository>
             <id>scala-tools.org</id>
-            <url>http://scala-tools.org/repo-releases</url>
+            <url>https://scala-tools.org/repo-releases</url>
         </repository>
     </repositories>
 
