Fixed file load for Azure-ADLS

--- a/pom.xml
+++ b/pom.xml
@@ -25,24 +25,34 @@
         -->
 
         <!-- Spark 3.0.1 with Scala 2.12 -->
-        <scala.version>2.12.9</scala.version>
+        <!--
+        <scala.version>2.12.10</scala.version>
         <scala.compact.version>2.12</scala.compact.version>
         <spark.version>3.0.1</spark.version>
         <spark.avro.version>3.0.1</spark.avro.version>
         <delta.lake.version>0.8.0</delta.lake.version>
         <mongo-spark-version>3.0.1</mongo-spark-version>
-        <!--
         -->
 
-        <!-- Spark 3.0.1 with Scala 2.12 -->
+        <!-- Spark 3.1.1 with Scala 2.12 -->
         <!--
-        <scala.version>2.12.9</scala.version>
+        <scala.version>2.12.10</scala.version>
         <scala.compact.version>2.12</scala.compact.version>
         <spark.version>3.1.1</spark.version>
         <spark.avro.version>3.0.1</spark.avro.version>
         <delta.lake.version>1.0.1</delta.lake.version>
         <mongo-spark-version>3.0.1</mongo-spark-version>
         -->
+
+        <!-- Spark 3.2.1 with Scala 2.12 -->
+        <!--
+        -->
+        <scala.version>2.12.10</scala.version>
+        <scala.compact.version>2.12</scala.compact.version>
+        <spark.version>3.2.1</spark.version>
+        <spark.avro.version>3.0.1</spark.avro.version>
+        <delta.lake.version>1.1.0</delta.lake.version>
+        <mongo-spark-version>3.0.1</mongo-spark-version>
     </properties>
 
     <groupId>com.qwshen</groupId>
