--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,12 @@
         <gson.version>2.8.6</gson.version>
         <maven.compiler.plugin>3.8.1</maven.compiler.plugin>
         <maven.scala.plugin>2.15.2</maven.scala.plugin>
-        <typesafe.config.version>1.4.1</typesafe.config.version>
+        <typesafe.config.version>1.4.2</typesafe.config.version>
         <io.confluent.version>4.1.2</io.confluent.version>
         <hadoop.version>2.10.1</hadoop.version>
         <hbase.version>1.7.1</hbase.version>
         <iceberg.runtime.version>0.13.1</iceberg.runtime.version>
+        <fasterxml.jackson.version>2.12.0</fasterxml.jackson.version>
 
         <!-- For Spark 2.4.2 with Scala 2.11. Note: please change the iceberg dependency accordingly -->
         <!--
@@ -313,9 +314,14 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${fasterxml.jackson.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
-            <version>2.12.0</version>
+            <version>${fasterxml.jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.typesafe</groupId>
@@ -326,7 +332,7 @@
         <dependency>
             <groupId>com.github.scopt</groupId>
             <artifactId>scopt_${scala.compact.version}</artifactId>
-            <version>3.7.1</version>
+            <version>4.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.jasypt</groupId>
@@ -342,14 +348,14 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.20</version>
-            <scope>test</scope>
+            <version>8.0.28</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.redislabs</groupId>
             <artifactId>spark-redis_${scala.compact.version}</artifactId>
-            <version>2.6.0</version>
-            <scope>test</scope>
+            <version>3.0.0</version>
+            <scope>provided</scope>
         </dependency>
      </dependencies>
 </project>
