--- a/src/test/resources/pipelines/template_pipeline.yaml
+++ b/src/test/resources/pipelines/template_pipeline.yaml
@@ -13,6 +13,8 @@ pipeline-def:
       value: ${application.process_date}
     - name: staging_uri
       value: "file:///c:/temp/staging"
+    - name: metrics_uri
+      value: "file:///c:/temp/metrics"
   aliases:
     - name: file
       type: com.qwshen.etl.source.FileReader
@@ -66,6 +68,10 @@ pipeline-def:
             name: events
             global: true
     - include: ./src/test/resources/pipelines/jobs/job.yaml
+  metrics-logging:
+    uri: "${metrics_uri}"
+    actions:
+      - load-events
   debug-staging:
     uri: "${staging_uri}"
     actions:
