--- a/pom.xml
+++ b/pom.xml
@@ -6,64 +6,34 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <gson.version>2.8.9</gson.version>
-        <maven.compiler.plugin>3.8.1</maven.compiler.plugin>
-        <maven.scala.plugin>2.15.2</maven.scala.plugin>
-        <typesafe.config.version>1.4.2</typesafe.config.version>
-        <io.confluent.version>4.1.2</io.confluent.version>
-        <hadoop.version>3.2.3</hadoop.version>
-        <hbase.version>1.7.1</hbase.version>
-        <iceberg.runtime.version>0.13.2</iceberg.runtime.version>
-        <fasterxml.jackson.version>2.12.0</fasterxml.jackson.version>
-
-        <!-- For Spark 2.4.2 with Scala 2.11. Note: please change the iceberg dependency accordingly -->
-        <!--
-        <scala.version>2.11.12</scala.version>
-        <scala.compact.version>2.11</scala.compact.version>
-        <spark.version>2.4.2</spark.version>
-        <spark.compact.version>2.4</spark.compact.version>
-        <spark.avro.version>2.4.8</spark.avro.version>
-        <delta.lake.version>0.6.1</delta.lake.version>
-        <mongo-spark-version>2.4.3</mongo-spark-version>
-        -->
-
-        <!-- Spark 3.0.1 with Scala 2.12. Note: please change the iceberg dependency accordingly -->
-        <!--
-        <scala.version>2.12.10</scala.version>
+        <scala.version>2.12.15</scala.version>
         <scala.compact.version>2.12</scala.compact.version>
-        <spark.version>3.0.1</spark.version>
-        <spark.compact.version>3.0</spark.compact.version>
-        <spark.avro.version>3.0.1</spark.avro.version>
-        <delta.lake.version>0.8.0</delta.lake.version>
-        <mongo-spark-version>3.0.1</mongo-spark-version>
-        -->
 
-        <!-- Spark 3.1.1 with Scala 2.12 -->
-        <!--
-        <scala.version>2.12.10</scala.version>
-        <scala.compact.version>2.12</scala.compact.version>
-        <spark.version>3.1.1</spark.version>
-        <spark.compact.version>3.1</spark.compact.version>
-        <spark.avro.version>3.0.1</spark.avro.version>
-        <delta.lake.version>1.0.1</delta.lake.version>
-        <mongo-spark-version>3.0.1</mongo-spark-version>
-        -->
-
-        <!-- Spark 3.2.1 with Scala 2.12 -->
-        <!--
-        -->
-        <scala.version>2.12.10</scala.version>
-        <scala.compact.version>2.12</scala.compact.version>
         <spark.version>3.2.1</spark.version>
         <spark.compact.version>3.2</spark.compact.version>
+
+        <hadoop.version>3.2.3</hadoop.version>
+        <hbase.version>1.7.1</hbase.version>
+
+        <scala-collection-compat.version>2.8.0</scala-collection-compat.version>
         <spark.avro.version>3.0.1</spark.avro.version>
-        <delta.lake.version>1.2.0</delta.lake.version>
+        <delta.lake.version>1.2.1</delta.lake.version>
+        <iceberg.runtime.version>0.14.0</iceberg.runtime.version>
+        <io.confluent.version>4.1.2</io.confluent.version>
         <mongo-spark-version>3.0.1</mongo-spark-version>
+
+        <gson.version>2.8.9</gson.version>
+        <typesafe.config.version>1.4.2</typesafe.config.version>
+        <fasterxml.jackson.version>2.12.0</fasterxml.jackson.version>
+
+        <maven.compiler.plugin>3.8.1</maven.compiler.plugin>
+        <maven.scala.plugin>2.15.2</maven.scala.plugin>
+        <scala-maven-plugin>4.3.0</scala-maven-plugin>
     </properties>
 
     <groupId>com.qwshen</groupId>
     <artifactId>spark-etl-framework_${scala.compact.version}_${spark.version}</artifactId>
-    <version>1.0</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
 
     <repositories>
@@ -97,7 +67,7 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>4.3.0</version>
+                <version>${scala-maven-plugin}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -113,32 +83,6 @@
                         <jvmArg>-Xmx1g</jvmArg>
                     </jvmArgs>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.1</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <filters>
-                                <filter>
-                                    <artifact>*:*</artifact>
-                                    <excludes>
-                                        <exclude>META-INF/maven/**</exclude>
-                                        <exclude>META-INF/*.SF</exclude>
-                                        <exclude>META-INF/*.DSA</exclude>
-                                        <exclude>META-NFO/*.RSA</exclude>
-                                    </excludes>
-                                </filter>
-                            </filters>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.scalatest</groupId>
@@ -187,19 +131,16 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.scala-lang.modules</groupId>
             <artifactId>scala-collection-compat_${scala.compact.version}</artifactId>
-            <version>2.1.4</version>
-            <scope>provided</scope>
+            <version>${scala-collection-compat.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -243,22 +184,6 @@
             <version>${iceberg.runtime.version}</version>
             <scope>provided</scope>
         </dependency>
-        <!-- For Spark 3.0
-        <dependency>
-            <groupId>org..apache.iceberg</groupId>
-            <artifactId>iceberg-spark3-runtime</artifactId>
-            <version>${iceberg.runtime.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        -->
-        <!-- For Spark 2.4
-        <dependency>
-            <groupId>org..apache.iceberg</groupId>
-            <artifactId>iceberg-spark-runtime</artifactId>
-            <version>${iceberg.runtime.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        -->
         <dependency>
             <groupId>org.apache.iceberg</groupId>
             <artifactId>iceberg-hive-runtime</artifactId>
@@ -327,7 +252,6 @@
             <groupId>com.typesafe</groupId>
             <artifactId>config</artifactId>
             <version>${typesafe.config.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.github.scopt</groupId>
@@ -340,12 +264,6 @@
             <version>1.9.3</version>
         </dependency>
         <dependency>
-            <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_${scala.compact.version}</artifactId>
-            <version>3.0.4</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.28</version>
@@ -356,6 +274,12 @@
             <artifactId>spark-redis_${scala.compact.version}</artifactId>
             <version>3.0.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_${scala.compact.version}</artifactId>
+            <version>3.0.4</version>
+            <scope>test</scope>
         </dependency>
      </dependencies>
 </project>
