--- a/pom.xml
+++ b/pom.xml
@@ -6,21 +6,21 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <scala.version>2.12.15</scala.version>
-        <scala.compact.version>2.12</scala.compact.version>
+        <scala.version>2.11.12</scala.version>
+        <scala.compact.version>2.11</scala.compact.version>
 
-        <spark.version>3.2.1</spark.version>
-        <spark.compact.version>3.2</spark.compact.version>
+        <spark.version>2.4.2</spark.version>
+        <spark.compact.version>2.4</spark.compact.version>
 
-        <hadoop.version>3.2.4</hadoop.version>
+        <hadoop.version>3.2.3</hadoop.version>
         <hbase.version>1.7.1</hbase.version>
 
         <scala-collection-compat.version>2.8.0</scala-collection-compat.version>
-        <spark.avro.version>3.0.1</spark.avro.version>
-        <delta.lake.version>1.2.1</delta.lake.version>
-        <iceberg.runtime.version>0.14.0</iceberg.runtime.version>
+        <spark.avro.version>2.4.8</spark.avro.version>
+        <delta.lake.version>0.6.1</delta.lake.version>
+        <iceberg.runtime.version>0.13.1</iceberg.runtime.version>
         <io.confluent.version>4.1.2</io.confluent.version>
-        <mongo-spark-version>3.0.1</mongo-spark-version>
+        <mongo-spark-version>2.4.3</mongo-spark-version>
 
         <gson.version>2.8.9</gson.version>
         <typesafe.config.version>1.4.2</typesafe.config.version>
@@ -179,8 +179,8 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.iceberg</groupId>
-            <artifactId>iceberg-spark-runtime-${spark.compact.version}_${scala.compact.version}</artifactId>
+            <groupId>org..apache.iceberg</groupId>
+            <artifactId>iceberg-spark-runtime</artifactId>
             <version>${iceberg.runtime.version}</version>
             <scope>provided</scope>
         </dependency>
@@ -271,8 +271,8 @@
         </dependency>
         <dependency>
             <groupId>com.redislabs</groupId>
-            <artifactId>spark-redis_${scala.compact.version}</artifactId>
-            <version>3.0.0</version>
+            <artifactId>spark-redis</artifactId>
+            <version>2.4.1</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
