--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
         <scala-collection-compat.version>2.8.0</scala-collection-compat.version>
         <spark.avro.version>3.0.1</spark.avro.version>
         <delta.lake.version>1.2.1</delta.lake.version>
-        <iceberg.runtime.version>0.14.0</iceberg.runtime.version>
+        <iceberg.spark.version>3.3</iceberg.spark.version>
+        <iceberg.runtime.version>1.2.1</iceberg.runtime.version>
         <io.confluent.version>4.1.2</io.confluent.version>
         <mongo-spark-version>3.0.1</mongo-spark-version>
 
@@ -198,7 +199,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.iceberg</groupId>
-            <artifactId>iceberg-spark-runtime-${spark.compact.version}_${scala.compact.version}</artifactId>
+            <artifactId>iceberg-spark-runtime-${iceberg.spark.version}_${scala.compact.version}</artifactId>
             <version>${iceberg.runtime.version}</version>
             <scope>provided</scope>
         </dependency>
