--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
-        <java.version>1.8</java.version>
-        <scala.version>2.12.15</scala.version>
+        <java.version>11</java.version>
+        <scala.version>2.12.16</scala.version>
         <scala.compact.version>2.12</scala.compact.version>
 
         <spark.version>3.5.3</spark.version>
@@ -15,21 +15,23 @@
         <hadoop.version>3.4.0</hadoop.version>
         <hbase.version>1.7.1</hbase.version>
 
-        <scala-collection-compat.version>2.8.0</scala-collection-compat.version>
+        <scala.collection.compat.version>2.8.0</scala.collection.compat.version>
         <spark.avro.version>3.0.1</spark.avro.version>
         <delta.lake.version>1.2.1</delta.lake.version>
         <iceberg.spark.version>3.3</iceberg.spark.version>
         <iceberg.runtime.version>1.2.1</iceberg.runtime.version>
         <io.confluent.version>4.1.2</io.confluent.version>
-        <mongo-spark-version>3.0.1</mongo-spark-version>
+        <mongo.spark.version>3.0.1</mongo.spark.version>
 
-        <gson.version>2.8.9</gson.version>
-        <typesafe.config.version>1.4.2</typesafe.config.version>
-        <fasterxml.jackson.version>2.12.0</fasterxml.jackson.version>
+        <gson.version>2.11.0</gson.version>
+        <typesafe.config.version>1.4.3</typesafe.config.version>
+        <fasterxml.jackson.version>2.15.2</fasterxml.jackson.version>
 
-        <maven.compiler.plugin>3.8.1</maven.compiler.plugin>
+        <maven.compiler.plugin>3.13.0</maven.compiler.plugin>
         <maven.scala.plugin>2.15.2</maven.scala.plugin>
-        <scala-maven-plugin>4.3.0</scala-maven-plugin>
+        <scala.maven.plugin>4.9.2</scala.maven.plugin>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <groupId>com.qwshen</groupId>
@@ -42,19 +44,7 @@
             <id>confluent.io</id>
             <url>https://packages.confluent.io/maven/</url>
         </repository>
-        <repository>
-            <id>scala-tools.org</id>
-            <url>https://scala-tools.org/repo-releases</url>
-        </repository>
     </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>scala-tools.org</id>
-            <name>Scala-tools Maven2 Repository</name>
-            <url>http://scala-tools.org/repo-releases</url>
-        </pluginRepository>
-    </pluginRepositories>
 
     <build>
         <sourceDirectory>src/main/scala</sourceDirectory>
@@ -68,7 +58,7 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>${scala-maven-plugin}</version>
+                <version>${scala.maven.plugin}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -88,7 +78,7 @@
             <plugin>
                 <groupId>org.scalatest</groupId>
                 <artifactId>scalatest-maven-plugin</artifactId>
-                <version>1.0</version>
+                <version>2.2.0</version>
                 <configuration>
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                     <filereports>WDF TestSuite.txt</filereports>
@@ -159,7 +149,7 @@
         <dependency>
             <groupId>org.scala-lang.modules</groupId>
             <artifactId>scala-collection-compat_${scala.compact.version}</artifactId>
-            <version>${scala-collection-compat.version}</version>
+            <version>${scala.collection.compat.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -254,7 +244,7 @@
         <dependency>
             <groupId>org.mongodb.spark</groupId>
             <artifactId>mongo-spark-connector_${scala.compact.version}</artifactId>
-            <version>${mongo-spark-version}</version>
+            <version>${mongo.spark.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -263,8 +253,18 @@
             <version>${fasterxml.jackson.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${fasterxml.jackson.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>${fasterxml.jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-scala_${scala.compact.version}</artifactId>
             <version>${fasterxml.jackson.version}</version>
         </dependency>
         <dependency>
@@ -283,9 +283,9 @@
             <version>1.9.3</version>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.28</version>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
